--- a/scripts/deb/changelog
+++ b/scripts/deb/changelog
@@ -1,3 +1,10 @@
+linux-source-5.9.1 (5.9.1-3) stable; urgency=critical
+
+  * viafb: viafb_accel = 0, ++debug
+  * esther.config: CRYPTO|FB_VIA|IPV6|HIGHMEM=4G
+
+ -- ach <adrian.chomicki@gmail.com>  Fri, 05 Feb 2021 03:08:48 +0100
+
 linux-source-5.9.1 (5.9.1-2) unstable; urgency=low
 
   * esther.config
