--- a/scripts/deb/changelog
+++ b/scripts/deb/changelog
@@ -1,3 +1,9 @@
+linux-source-5.9.1 (5.9.1-4) stable; urgency=critical
+
+  * esther.config: CPUFREQ-->e_powersaver
+
+ -- ach <adrian.chomicki@gmail.com>  Sat, 06 Feb 2021 02:42:25 +0100
+
 linux-source-5.9.1 (5.9.1-3) stable; urgency=critical
 
   * viafb: viafb_accel = 0, ++debug
